# v

./: .gitignore  .travis.yml  Cargo.toml  Rocket.toml  build.rs
.github/workflows/: build.yml
assets/: styles.css  v.webmanifest
ci/: before_deploy.sh  script.sh
fuzz/: Cargo.toml
fuzz/fuzz_targets/: validate_url.rs
migrations/2020-09-03-153237_create_image/: up.sql
migrations/2020-09-03-153601_create_albums/: up.sql
migrations/2020-09-03-154710_add_albums_fk_to_images/: down.sql  up.sql
migrations/2020-09-06-150210_remove_nullables/: down.sql  up.sql
migrations/2020-09-17-201340_add_index_to_image/: down.sql  up.sql
src/: config.rs  deletion_token.rs  imgur.rs  lib.rs  main.rs  models.rs  schema.rs
src/handlers/: album.rs  index.rs  mod.rs  static_files.rs
templates/: footer.hbs  import.hbs  index.hbs  layout.hbs  new.hbs
templates/album/: auth.hbs  created.hbs  edit.hbs  new.hbs  show.hbs
templates/error/: 404.hbs
tests/: album.rs  index.rs
