[package]
name = "v"
version = "0.1.0"
authors = ["Nikolai Zimmermann <nikolai@chronophylos.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.5", features = ["postgres", "r2d2"] }
env_logger = "0.7.1"
log = "0.4.11"
serde = { version = "1.0.115", features = ["derive"] }
futures = "0.3.5"
rocket = "0.4.5"
rand = "0.7.3"
anyhow = "1.0.32"
url = "2.1.1"
diesel_migrations = "1.4.0"
lazy_static = "1.4.0"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["diesel_postgres_pool", "handlebars_templates", "serve"]
