[package]
name = "v"
version = "0.1.2"
authors = ["Nikolai Zimmermann <nikolai@chronophylos.com>"]
description = "A image viewer and album manager"
license = "MIT"
edition = "2018"

[[bin]]
name = "v-server"
path = "src/main.rs"

[profile.release]
lto = true

[dependencies]
diesel = { version = "1.4.5", features = ["postgres", "r2d2"] }
env_logger = "0.7.1"
log = "0.4.11"
serde = { version = "1.0.116", features = ["derive"] }
futures = "0.3.5"
rocket = "0.4.5"
rand = "0.7.3"
anyhow = "1.0.32"
url = "2.1.1"
diesel_migrations = "1.4.0"
lazy_static = "1.4.0"
smol = "1.0.0"
reqwest = { version = "0.10.8", features = ["json", "blocking"] }
serde_json = "1.0.57"
toml = "0.5.6"
self_update = { version = "0.20.0", default-features = false, features = ["rustls", "archive-tar", "compression-flate2"] }


[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["diesel_postgres_pool", "handlebars_templates", "serve", "helmet", "json"]
