[package]
name = "v"
version = "0.1.6"
authors = ["Nikolai Zimmermann <nikolai@chronophylos.com>"]
description = "A image viewer and album manager"
license = "MIT"
edition = "2018"

[[bin]]
name = "v-server"
path = "src/main.rs"

[profile.release]
lto = true

[dependencies]
anyhow = "1.0.33"
diesel = { version = "1.4.5", features = ["postgres", "r2d2"] }
diesel_migrations = "1.4.0"
env_logger = "0.7.1"
futures = "0.3.6"
lazy_static = "1.4.0"
log = "0.4.11"
rand = "0.7.3"
reqwest = { version = "0.10.8", features = ["json", "blocking", "rustls-tls"] }
resource = "0.5.0"
rocket = "0.4.5"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.58"
smol = "1.2.3"
toml = "0.5.6"
url = "2.1.1"

[dependencies.self_update]
version = "0.20.0"
default-features = false
features = ["rustls", "archive-tar", "compression-flate2"]


[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["diesel_postgres_pool", "handlebars_templates", "helmet", "json"]
